css/main.css
body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: black;
    position: relative;
}

.main-game-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main-title {
    color: #e30000;
    font-size: 60px;
    padding: 5px 0 0px;
    font-family: 'Black Ops One', cursive;
    z-index: 3;
}

.level-title {
    color: #e30000;
    font-size: 40px;
    font-family: 'Black Ops One', cursive;
    z-index: 3;
    display: flex;
}

.level-number {
    padding: 0 10px;
}

#game-canvas {
    border: 10px solid #e30000;
}

.icon-links {
    padding: 20px;
    z-index: 4;
    display: flex;
}

.github-icon,
.linkedin-icon,
.volume-icon {
    color: #e30000;
    padding: 10px;
    font-size: 30px;
    cursor: pointer;
}

.github-icon:hover,
.linkedin-icon:hover,
.volume-icon:hover {
    color: #a00000;
}

.mobile-input {
    display: none;

}

@media (max-width: 850px) {
    .main-title {
        font-size: 9vw;
    }

    .level-title {
        font-size: 6vw;
    }

    .icon-links {
        padding: 0 20px 20px;
    }

    .github-icon,
    .linkedin-icon,
    .volume-icon {
        font-size: 20px;
    }

    .mobile-input {
        border: none;
        display: block;
        position: absolute;
        width: 100%;
        height: 100%;
        z-index: 2;
        color: transparent;
        cursor: none;
        caret-color: transparent;
        outline: none;
    }

    .mobile-input:focus {
        border: none;
        color: transparent;
        background-color: transparent;
        cursor: none;
        caret-color: transparent;
        outline: none;
    }

    .mobile-input.text:focus {
        border: none;
        outline: none;
        color: transparent;
        background-color: transparent;
        cursor: none;
        caret-color: transparent;
    }
}

